# ghostcrawl

./: .gitignore  CONTRIBUTING.md  PUBLISH-MANIFEST.md  README.md
python/: MANIFEST.in  Makefile  README.md  pyproject.toml
python-langchain/: Makefile  README.md  pyproject.toml
python-langchain/ghostcrawl_langchain/: __init__.py  _client.py  codes.py  errors.py  tools.py
python/_generated/: ghostcrawl_client.py  kiota-lock.json
python/_generated/models/: agent_request.py  agent_request_mode.py  agent_request_task.py  agent_request_task_steps.py  agent_request_task_steps_schema.py  agent_request_task_steps_type.py  auth_context.py  batch_scrape_request.py  batch_scrape_request_behavior_actions.py  batch_scrape_request_behavior_actions_member1.py  batch_scrape_request_behavior_actions_member2.py  batch_scrape_request_engine.py  batch_scrape_request_extraction_strategy.py  batch_scrape_request_extraction_strategy_member1.py  batch_scrape_request_identity_country.py  batch_scrape_request_identity_country_member1.py  batch_scrape_request_language.py  batch_scrape_request_language_member1.py  batch_scrape_request_output_format.py  batch_scrape_request_profile.py  batch_scrape_request_profile_member1.py  cdp_frame_request.py  cdp_url_request.py  content_request.py  content_request_engine.py  content_request_format.py  content_request_identity.py  content_request_identity_country.py  content_request_identity_country_member1.py  content_request_identity_member1.py  content_request_language.py  content_request_language_member1.py  content_request_profile.py  content_request_profile_member1.py  content_request_proxy.py  content_request_proxy_member1.py  cookie_dict.py  cookie_dict_domain.py  cookie_dict_domain_member1.py  cookie_dict_expires.py  (+192 more)
python/_generated/v1/: v1_request_builder.py
python/_generated/v1/agent/: agent404_error.py  agent_request_builder.py
python/_generated/v1/cdp/: cdp_request_builder.py
python/_generated/v1/content/: content_request_builder.py
python/docs/: model-providers.md
python/examples/: amazon-review-scraper.py  quickstart_agent.py  quickstart_crawl.py  quickstart_extract.py  quickstart_scrape.py  youtube-oembed-example.py
python/ghostcrawl/: CONTRIBUTING.md  README.md  __init__.py  _ghostcrawl.py  branded.py  facade.py  params.py  retry_policy.py
python/ghostcrawl/cli/: __init__.py  _batch.py  _config_store.py  install.py  main.py
python/ghostcrawl/errors/: __init__.py  codes.py  identity_errors.py
python/ghostcrawl/mcp/: __init__.py  wrapper.py
python/ghostcrawl/tests/: test_cli_preset_binary.py  test_facade_crawl_wait.py  test_facade_errors.py  test_facade_extras.py  test_params_cookie_urlencode.py
python/spec/: openapi.json
(+237 files in other folders)
