[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghostcrawl-langchain"
version = "2.3.4"
description = "LangChain tools for the GhostCrawl web data API."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.3",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["ghostcrawl_langchain"]

[tool.hatch.build.targets.sdist]
include = [
    "ghostcrawl_langchain",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    ".gitignore",
    "tests",
]
ignore-vcs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
